language/move-lang/tests/move_check/borrows/assign_local_field_invalid.exp
error[E07003]: invalid operation, could create dangling a reference
   ┌─ tests/move_check/borrows/assign_local_field_invalid.move:13:9
   │
12 │         let f = &s.f;
   │                 ---- It is still being borrowed by this reference
13 │         s = S { f: 0, g: 0 };
   │         ^ Invalid assignment of local 's'

error[E07003]: invalid operation, could create dangling a reference
   ┌─ tests/move_check/borrows/assign_local_field_invalid.move:19:9
   │
18 │         let f = &mut s.f;
   │                 -------- It is still being mutably borrowed by this reference
19 │         s = S { f: 0, g: 0 };
   │         ^ Invalid assignment of local 's'

error[E07003]: invalid operation, could create dangling a reference
   ┌─ tests/move_check/borrows/assign_local_field_invalid.move:25:9
   │
24 │         let f = id(&s.f);
   │                 -------- It is still being borrowed by this reference
25 │         s = S { f: 0, g: 0 };
   │         ^ Invalid assignment of local 's'

error[E07003]: invalid operation, could create dangling a reference
   ┌─ tests/move_check/borrows/assign_local_field_invalid.move:31:9
   │
30 │         let f = id_mut(&mut s.f);
   │                 ---------------- It is still being mutably borrowed by this reference
31 │         s = S { f: 0, g: 0 };
   │         ^ Invalid assignment of local 's'

